<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <TextView
        style="@style/TextAppearance.Proyecto.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_restore"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_restore"
        android:textAlignment="center"
        android:layout_marginBottom="32dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_authenticate_restore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_auth_google" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start_restore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/btn_start_restore" />

    <ProgressBar
        android:id="@+id/progress_restore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:visibility="gone" />
</LinearLayout>
